examples/test/testpolicy6541.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6541
  namespace: namespace80
spec:
  podSelector:
    matchLabels:
      key46: value47
      key41: value40
      key27: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value47
      podSelector:
        matchLabels:
          key21: value44
          key12: value6
